--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
-dependencies: []
+dependencies:
+  - geerlingguy.homebrew
 galaxy_info:
   author: tkimball83
   description: macOS - An adaptive prompt for bash and zsh
