--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,10 +7,11 @@ galaxy_info:
   license: BSD
   min_ansible_version: 2.0
   platforms:
-    - name: Darwin
+    - name: MacOSX
       versions: 
         - all
   galaxy_tags:
     - liquidprompt
     - macos
     - osx
+...
