Remove dependency and update license

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,9 @@
 ---
-dependencies:
-  - geerlingguy.homebrew
 galaxy_info:
   author: tkimball83
   description: macOS - An adaptive prompt for bash and zsh
-  license: BSD
-  min_ansible_version: 2.0
+  license: GPLv3
+  min_ansible_version: 2.4
   platforms:
     - name: MacOSX
       versions: 
@@ -13,5 +11,4 @@ galaxy_info:
   galaxy_tags:
     - liquidprompt
     - macos
-    - osx
 ...
