--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,35 +1,41 @@
 ---
 liquidprompt_battery_threshold: 75
-liquidprompt_enable_batt: True
-liquidprompt_enable_bzr: True
-liquidprompt_enable_fossil: True
-liquidprompt_enable_fqdn: False
-liquidprompt_enable_git: True
-liquidprompt_enable_hg: True
-liquidprompt_enable_jobs: True
-liquidprompt_enable_load: True
-liquidprompt_enable_perm: True
-liquidprompt_enable_proxy: True
-liquidprompt_enable_runtime: False
-liquidprompt_enable_scls: True
-liquidprompt_enable_screen_title: False
-liquidprompt_enable_shorten_path: True
-liquidprompt_enable_ssh_colors: False
-liquidprompt_enable_sudo: False
-liquidprompt_enable_svn: True
-liquidprompt_enable_temp: True
-liquidprompt_enable_time: False
-liquidprompt_enable_title: False
-liquidprompt_enable_vcs_root: False
-liquidprompt_enable_virtualenv: True
+liquidprompt_dest: "{{ ansible_env.HOME }}"
+liquidprompt_disabled_vcs_path: []
+liquidprompt_enable_batt: true
+liquidprompt_enable_bzr: true
+liquidprompt_enable_fossil: true
+liquidprompt_enable_fqdn: false
+liquidprompt_enable_git: true
+liquidprompt_enable_hg: true
+liquidprompt_enable_jobs: true
+liquidprompt_enable_load: true
+liquidprompt_enable_perm: true
+liquidprompt_enable_proxy: true
+liquidprompt_enable_runtime: false
+liquidprompt_enable_scls: true
+liquidprompt_enable_screen_title: false
+liquidprompt_enable_shorten_path: true
+liquidprompt_enable_ssh_colors: false
+liquidprompt_enable_sudo: false
+liquidprompt_enable_svn: true
+liquidprompt_enable_temp: true
+liquidprompt_enable_time: false
+liquidprompt_enable_title: true
+liquidprompt_enable_vcs_root: false
+liquidprompt_enable_virtualenv: true
+liquidprompt_group: "{{ ansible_effective_group_id }}"
 liquidprompt_hostname_always: '0'
 liquidprompt_load_threshold: 60
+liquidprompt_owner: "{{ ansible_effective_user_id }}"
 liquidprompt_path: /usr/local/share/liquidprompt
 liquidprompt_path_keep: 2
 liquidprompt_path_length: 35
-liquidprompt_percents_always: True
+liquidprompt_percents_always: true
+liquidprompt_ps1_file: ''
 liquidprompt_runtime_threshold: 2
+liquidprompt_source: []
 liquidprompt_temp_threshold: 60
-liquidprompt_time_analog: False
-liquidprompt_user_always: True
+liquidprompt_time_analog: false
+liquidprompt_user_always: true
 ...
