--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,12 +1,13 @@
 ---
+dependencies: []
 galaxy_info:
   author: tkimball83
   description: macOS - An adaptive prompt for bash and zsh
   license: GPLv3
-  min_ansible_version: 2.4
+  min_ansible_version: 2.5
   platforms:
     - name: MacOSX
-      versions: 
+      versions:
         - all
   galaxy_tags:
     - liquidprompt
